<?xml version="1.0" encoding="utf-8"?><!--首页侧滑栏menu-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_integral"
        android:icon="@drawable/ic_integral_64"
        android:title="@string/my_integral"
        app:actionViewClass="android.widget.TextView" />

    <item
        android:id="@+id/nav_collect"
        android:icon="@drawable/ic_collect_black_64"
        android:title="@string/my_collect" />

    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_share_64"
        android:title="@string/my_share" />

    <item
        android:id="@+id/nav_record"
        android:icon="@drawable/ic_record_64"
        android:title="@string/my_record" />

    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_setting_64"
        android:title="@string/my_setting" />

    <item
        android:id="@+id/nav_exit"
        android:icon="@drawable/ic_exit_64"
        android:title="@string/my_exit" />

</menu>