<?xml version="1.0" encoding="utf-8"?><!--分享文章页面-->
<com.example.wanAndroid.widget.nested.NestedLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.hjq.bar.TitleBar
        android:id="@+id/title_bar"
        style="@style/TitleBar"
        app:title="@string/share_article" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/share_title"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/sp_16" />

    <com.hjq.shape.view.ShapeEditText
        android:id="@+id/et_share_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="top"
        android:hint="@string/share_title_tip"
        android:inputType="text|textMultiLine"
        android:lines="3"
        android:padding="@dimen/dp_5"
        android:textColorHint="?android:attr/textColorSecondary"
        android:textSize="@dimen/sp_16"
        app:shape_radius="@dimen/dp_5"
        app:shape_solidColor="@color/color_vertical_tab_layout_fill" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/share_link"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/sp_16" />

    <com.hjq.shape.view.ShapeEditText
        android:id="@+id/et_share_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="top"
        android:hint="@string/share_link_tip"
        android:inputType="text|textMultiLine"
        android:lines="3"
        android:padding="@dimen/dp_5"
        android:textColorHint="?android:attr/textColorSecondary"
        android:textSize="@dimen/sp_16"
        app:shape_radius="@dimen/dp_5"
        app:shape_solidColor="@color/color_vertical_tab_layout_fill" />

    <com.example.wanAndroid.widget.view.SubmitButton
        android:id="@+id/btn_share"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_48"
        android:layout_marginVertical="@dimen/dp_36"
        android:text="@string/share" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="@string/share_tip"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/dp_3"
        android:lineSpacingMultiplier="1.1"
        android:paddingHorizontal="@dimen/dp_16"
        android:text="@string/share_article_tip"
        android:textSize="@dimen/sp_14" />

</com.example.wanAndroid.widget.nested.NestedLinearLayout>