<?xml version="1.0" encoding="utf-8"?><!--适配器积分排行列表-->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dp_8"
    android:layout_marginVertical="@dimen/dp_5"
    app:cardCornerRadius="@dimen/dp_4"
    app:cardElevation="@dimen/dp_4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:gravity="center">

        <TextView
            android:id="@+id/item_integral_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            tools:text="@string/integral_rank" />

        <TextView
            android:id="@+id/item_integral_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_12"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:lines="1"
            android:textSize="@dimen/sp_16"
            tools:text="@string/integral_name" />

        <TextView
            android:id="@+id/item_integral_lv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_12"
            android:textSize="@dimen/sp_18"
            tools:text="@string/integral_lv" />

        <TextView
            android:id="@+id/item_integral_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_12"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            tools:text="@string/integral" />

    </LinearLayout>

</androidx.cardview.widget.CardView>